--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,10 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "datasets>=3.6.0",
+    "gradio>=5.31.0",
+    "ipykernel>=6.29.5",
     "librosa>=0.11.0",
+    "np>=1.0.2",
     "soundfile>=0.13.1",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
